--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -8,7 +8,7 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <%=link_to "Login", sessions_login_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Logout</a>
