--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -14,7 +14,7 @@
           <a class="nav-link" href="#">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign Up</a>
+          <%=link_to "Sign Up", new_user_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled">+Add Event</a>
