--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -11,7 +11,7 @@
           <%=link_to "Login", sessions_login_path, class: "nav-link"%>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Logout</a>
+          <%=link_to "Logout", sessions_logout_path, class: "nav-link"%>          
         </li>
         <li class="nav-item">
           <%=link_to "Sign Up", new_user_path, class: "nav-link"%>
