--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="#">Private-Event</a>
     
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav navbar-right">
+      <ul class="navbar-nav justify-content-end">
         <li class="nav-item">
            <%=link_to "Home", root_path, class: "nav-link"%>
         </li>
