--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,6 +8,7 @@
 <p>
   <% if @subscribed %>
   <%= "Subscribed"%>
+  <%=link_to "Unsubscribe", event_subscribings_delete_path({event_id: @event.id}), method: 'get', class: 'btn btn-outline-danger m-3'%>
   <%else%>
   <%= "Not subscribed"%>
   <%=link_to "Subscribe", event_subscribings_path({event_id: @event.id}), method: 'post', class: 'btn btn-outline-primary m-3'%>
